# django-graphql

./: .gitignore  pyproject.toml
core/: schema.py  settings.py  urls.py
ingredients/: models.py  schema.py
