[tool.poetry]
name = "django-graphql"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_graphql"}]

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.13.1"
graphene-django = "^2.15.0"
Django = "3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
